--- a/templates/profile.tmpl
+++ b/templates/profile.tmpl
@@ -66,8 +66,8 @@
 			</li>
 			{{end}}
 			<div class="pv4 ph2">
-				<a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib blue" href="#0">Download all</a>
-				<a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib gray" href="#0">Delete profile</a>
+				<a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib blue" href="/download/data.json">Download all</a>
+				<!--<a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib gray" href="#0">Delete profile</a>-->
 			</article>
 			<!-- <article class="ph2 pv4">
 				<span class="f5 db lh-copy measure">
