Add google tracking

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -49,6 +49,15 @@
 		<link rel="stylesheet" href="/static/css/tachyons.min.css">
 		<link rel="stylesheet" href="/static/css/style.css">
 		<script src="/static/js/feather.min.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-2345677-20"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-2345677-20');
+		</script>
 	</head>
 	<body id="touchsurface">
 		<header class="sans-serif">
