--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -36,6 +36,11 @@
 									<i data-feather="help-circle" class="dib h1 w1"></i>
 									<span class="f6 pr2">About</span>
 		</a> -->
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1 v-mid" href="/rss.xml">
+			<i data-feather="radio" class="dib h1 w1 v-mid"></i>
+			<span class="f6 pr2  v-mid">RSS</span>
+		</a>
+
 		{{ if .SignedIn }}
 		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/signout">Log Out</a>
 		{{ else }}
