Change button sizes

--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -38,7 +38,7 @@
 		</a> -->
 		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1 v-mid" href="/rss.xml">
 			<i data-feather="radio" class="dib h1 w1 v-mid"></i>
-			<span class="f6 pr2  v-mid">RSS</span>
+			<span class="f6 pr2  v-mid">feed</span>
 		</a>
 
 		{{ if .SignedIn }}
