--- a/templates/topics.tmpl
+++ b/templates/topics.tmpl
@@ -13,7 +13,7 @@
 		Sign up for beta access or learn more about x.
 	</p> -->
 	<div>
-		<a class="f4 f3-m f3-l    leader br-pill dark-blue no-underline ba grow pv2 ph3 dib" href="/upload">
+		<a class="f4 f3-m f3-l    leader br-pill dark-blue no-underline ba grow pv2 ph3 dib" href="/topics">
 			Suggest Topic
 		</a>
 	</div>
