--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -25,7 +25,7 @@ min-height: 320px !important;
 		Write your story online
 		</h1>
 		<div class="fw2 f5 lh-copy mt0 mb3 pv2 measure-wide">
-			Alternatively, you can email your story as an attachment to stories@mg.storiesincognito.org, or mail it to <em>P.O. Box 123, Hillsboro, Oregon</em>.
+			Alternatively, you can email your story as an attachment to stories@mg.storiesincognito.org</em>.
 		</div>
 		<!-- <p class="fw1 f5 mt0 mb3">
 			Sign up for beta access or learn more about x.
