--- a/templates/profile.tmpl
+++ b/templates/profile.tmpl
@@ -61,7 +61,7 @@
 				<div>
 					<a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib blue" href="/read/story/{{ .ID }}">Read</a>
 					<a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib black" href="/write/{{ .ID }}">Edit</a>
-					<a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="/delete?story={{ .ID }}">Delete</a>
+					<a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="/delete?story={{ .ID }}" onclick="return confirm('Are you sure?')">Delete</a>
 				</div>
 			</li>
 			{{end}}
@@ -70,9 +70,9 @@
 				<!--<a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib gray" href="#0">Delete profile</a>-->
 			</article>
 			<!-- <article class="ph2 pv4">
-				<span class="f5 db lh-copy measure">
-					This is the current list of topics, some of which are passed. Click on a topic to read the stories from it.
-				</span>
+					<span class="f5 db lh-copy measure">
+							This is the current list of topics, some of which are passed. Click on a topic to read the stories from it.
+					</span>
 			</article> -->
 		</section>
 		{{ template "footer" . }}
