--- a/templates/read.tmpl
+++ b/templates/read.tmpl
@@ -37,7 +37,7 @@
 		</a>
 		{{ end }}
 
-					<a href="/write/?topic=reply-all-{{ .Story.Topic | slugify }}" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box mr4">
+					<a href="/write/?topic=reply-to-{{ .Story.Topic | slugify }}" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box mr4">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M20 14.66V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h5.34"></path><polygon points="18 2 22 6 12 16 8 16 8 12 18 2"></polygon></svg>
 			<span class="pl1 f7 f6-s  f5-m f4-l">Reply</span>
 		</a>
