--- a/templates/admin.tmpl
+++ b/templates/admin.tmpl
@@ -9,7 +9,7 @@
 						<th class="fw6 tl pa2 bg-white">Topic</th>
 						<th class="fw6 tl pa2 bg-white">ID</th>
 						<th class="fw6 tl pa2 bg-white">Story</th>
-<!--						<th class="fw6 tl pa2 bg-white">User</th>-->
+						<th class="fw6 tl pa2 bg-white">User</th>
 						<th class="fw6 tl pa2 bg-white">Created</th>
 						<th class="fw6 tl pa2 bg-white">Published</th>
 						<th class="fw6 tl pa2 bg-white"></th>
@@ -23,7 +23,7 @@
 						<td class="pa2">{{ .Topic }}</td>
 						<td class="pa2"><code><a href="/write/{{ .ID }}">{{ .ID }}</a></code></td>
 						<td class="pa2"><small><em>“{{ .Content.CurrentText | firsttenwords }} …”</em></small></td>
-						<!--<td class="pa2">{{ .UserID }}</td>-->
+						<td class="pa2"><a href="#{{ .UserID }}"><code>{{ .UserID }}</code></a></td>
 						<td class="pa2"><small>{{ .DateCreated.Format "Jan 02, 2006 3:04PM" }}</small></td>
 						<td class="pa2"><small>{{ if .Published}}{{ .DatePublished.Format "Jan 02, 2006 15:04PM" }}{{ end }}</small> </td>
 						<td class="pa2"><a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib blue" href="/read/story/{{ .ID }}">Read</a>
@@ -47,8 +47,8 @@
 			<table class="f6 w-100 mw8 center" cellspacing="0">
 				<thead>
 					<tr class="stripe-dark">
-						<th class="fw6 tl pa2 bg-white">Email</th>
 						<th class="fw6 tl pa2 bg-white">ID</th>
+						<th class="fw6 tl pa2 bg-white">Email</th>
 						<th class="fw6 tl pa2 bg-white">Joined</th>
 						<th class="fw6 tl pa2 bg-white">Language</th>
 						<th class="fw6 tl pa2 bg-white">Subscribed</th>
@@ -57,8 +57,8 @@
 				<tbody class="lh-copy">
 					{{ range .Users }}
 					<tr class="stripe-dark">
+						<td class="pa2" id="{{ .ID }}"><code>{{ .ID }}</code></td>
 						<td class="pa2">{{ .Email }}</td>
-						<td class="pa2">{{ .ID }}</td>
 						<td class="pa2">{{ .Joined.Format "Jan 02, 2006 15:04:05 UTC"  }}</td>
 						<td class="pa2">{{ .Language }}</td>
 						<td class="pa2">{{ .Subscribed }}</td>
