--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -4,6 +4,7 @@
 	<div class="mt3">
 		<a href="/terms/"    title="Terms" class="f6 dib ph2 link mid-gray dim">Terms of Use</a>
 		<a href="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim">Privacy</a>
+		<a href="/contact/"  title="Contact" class="f6 dib ph2 link mid-gray dim">Contact</a>
 	</div>
 </footer>
 <script>
