--- a/templates/landing.tmpl
+++ b/templates/landing.tmpl
@@ -8,10 +8,10 @@
 			</header>
 			<section class="pv2">
 				<p class="f5 lh-copy measure-wide">
-					<span class="leader f4"><strong>stories, incognito</strong></span> is a minimalist online magazine for sharing true stories anonymously. There is no subscription, no ads, and no internet comments -  you will not be judged.
+					<span class="leader f4"><strong>stories, incognito</strong></span> is a minimalist online magazine for sharing short creative nonfiction stories, anonymously. There is no subscription, no ads, and no internet comments -  you will not be judged.
 				</p>
 				<p class="f5 lh-copy measure-wide">
-					All the stories are from real anonymous people. We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful
+					All the stories are from real people, but names are withheld to promote honesty and sincerity. We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful
 					Anonymous, except that here we consider <em>all stories</em> from everywhere in the world.
 				</p>
 			</section>
