--- a/templates/contact.tmpl
+++ b/templates/contact.tmpl
@@ -8,7 +8,10 @@
 			</header>
 			<section class="pt2 pb4">
 				<p class="f5 lh-copy measure-wide">
-					<span class="leader f4">Stores Incognito</span> is a place for anonymous, short, creative nonfiction.
+					<span class="leader f4">anonfiction</span> is a place for creative anonymous nonfiction.
+				</p>
+				<p class="f5 lh-copy measure-wide">
+					Our mission is similar to <a href="https://www.thesunmagazine.org/submit#readers-write">The Sun’s Reader’s Write</a>, <a href="http://brevitymag.com">Brevity Magazine</a>, <a href="https://www.creativenonfiction.org">Creative Nonfiction Magazine</a>, <a href="http://www.100wordstory.org">100 Word Stories</a>, <a href="https://1966journal.org">1966 Journal</a>, <a href="https://concis.io">Concis</a>, <a href="http://proximitymagazine.org">Proximity Magazine</a>, <a href="https://spartanlit.com">Spartan Literature</a>, and <a href="http://threadliterary.com">Thread Literary</a>. However, unlike these magazines, we are devoted to publishing great <em>anonymous</em> nonfiction where great writing can take place despite the name of the person who writes it.
 				</p>
 			</section>
 		</div>
@@ -17,7 +20,7 @@
 				<h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">
 				Contact</h3>
 			</header>
-			<form action="https://formspree.io/storiesincognito.org@gmail.com" method="POST">
+			<form action="https://formspree.io/anonymousnonfiction@gmail.com" method="POST">
 				<div class="measure pv2 mt2">
 					<label for="keywords" class="f3 b db mb2 leader">Leave a message
 					</label>
