--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,6 +1,6 @@
 {{ define "footer" }}
 <footer class="pv4 ph5-ns mid-gray ph3 ">
-	<small class="f6 db">© 2017 <b class="ttu">stories, incognito</b>., All Rights Reserved</small>
+	<small class="f6 db">© 2017 <b class="ttu leader f4">anonfiction</b>, All Rights Reserved</small>
 	<div class="mt3">
 		<a href="/terms/"    title="Terms" class="f6 dib ph2 link mid-gray dim">Terms of Use</a>
 		<a href="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim">Privacy</a>
