--- a/templates/privacy.tmpl
+++ b/templates/privacy.tmpl
@@ -12,7 +12,7 @@
 			When you browse our website, we also automatically receive your computer’s internet protocol (IP) address in order to provide us with information that helps us learn about your browser and operating system. These IP logs are stored for one month and then deleted and will never be shared with a third-party.
 			<h2>CONSENT</h2>
 			When you provide us with personal information to complete a sign up, we imply that you consent to our collecting it and using it for that specific reason only. If we ask for your personal information for a secondary reason, like marketing, we will either ask you directly for your expressed consent, or provide you with an opportunity to say no.
-			If after you opt-in, you change your mind, you may withdraw your consent for us to contact you, for the continued collection, use or disclosure of your information, at anytime, by contacting us at stories@mg.storiesincognito.org. We may disclose your personal information if we are required by law to do so or if you violate our Terms of Service.
+			If after you opt-in, you change your mind, you may withdraw your consent for us to contact you, for the continued collection, use or disclosure of your information, at anytime, by contacting us at stories@anonfiction.com. We may disclose your personal information if we are required by law to do so or if you violate our Terms of Service.
 			<h2>Security</h2>
 			To protect your personal information, we take reasonable precautions and follow industry best practices to make sure it is not inappropriately lost, misused, accessed, disclosed, altered or destroyed. Although no method of transmission over the Internet or electronic storage is 100% secure, we follow all PCI-DSS requirements and implement additional generally accepted industry standards.
 			<h2>Age of Consent</h2>
@@ -20,7 +20,7 @@
 			<h2>Changes to privacy policy</h2>
 			We reserve the right to modify this privacy policy at any time, so please review it frequently. Changes and clarifications will take effect immediately upon their posting on the website. If we make material changes to this policy, we will notify you here that it has been updated, so that you are aware of what information we collect, how we use it, and under what circumstances, if any, we use and/or disclose it.
 			<h2>Questions and contact information</h2>
-			If you would like to: access, correct, amend or delete any personal information we have about you, register a complaint, or simply want more information contact our Privacy Compliance Officer at stories@mg.storiesincognito.org or by mail at Stories, Incognito
+			If you would like to: access, correct, amend or delete any personal information we have about you, register a complaint, or simply want more information contact our Privacy Compliance Officer at stories@anonfiction.com or by mail at anonfiction.
 			[Re: Privacy Compliance Officer]
 		</span>
 	</article>
