--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -4,27 +4,27 @@
 	<head>
 		<!-- COMMON TAGS -->
 		<meta charset="utf-8">
-		<title>Stories, Incognito</title>
+		<title>anonfiction</title>
 		<!-- Search Engine -->
-		<meta name="description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous stories from real people.{{ end }}">
-		<meta name="image" content="https://storiesincognito.org/static/img/logo.jpg">
+		<meta name="description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
+		<meta name="image" content="https://www.anonfiction.com/static/img/logo.jpg">
 		<!-- Schema.org for Google -->
-		<meta itemprop="name" content="Stories, Incognito">
-		<meta itemprop="description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous stories from real people.{{ end }}">
-		<meta itemprop="image" content="https://storiesincognito.org/static/img/logo.jpg">
+		<meta itemprop="name" content="anonfiction">
+		<meta itemprop="description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
+		<meta itemprop="image" content="https://www.anonfiction.com/static/img/logo.jpg">
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary">
-		<meta name="twitter:title" content="Stories, Incognito">
-		<meta name="twitter:description" content="Read a story, leave a story. Beautiful anonymous stories from real people.">
-		<meta name="twitter:site" content="@storiesincognit">
-		<meta name="twitter:creator" content="@storiesincognit">
-		<meta name="twitter:image:src" content="https://storiesincognito.org/static/img/logo.jpg">
+		<meta name="twitter:title" content="anonfiction">
+		<meta name="twitter:description" content="Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.">
+		<meta name="twitter:site" content="@anonfictionmag">
+		<meta name="twitter:creator" content="@anonfictionmag">
+		<meta name="twitter:image:src" content="https://www.anonfiction.com/static/img/logo.jpg">
 		<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-		<meta name="og:title" content="Stories, Incognito">
-		<meta name="og:description" content="Read a story, leave a story. Beautiful anonymous stories from real people.">
-		<meta name="og:image" content="https://storiesincognito.org/static/img/logo.jpg">
-		<meta name="og:url" content="https://storiesincognito.org">
-		<meta name="og:site_name" content="Stories, Incognito">
+		<meta name="og:title" content="anonfiction">
+		<meta name="og:description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
+		<meta name="og:image" content="https://www.anonfiction.com/static/img/logo.jpg">
+		<meta name="og:url" content="https://www.anonfiction.com">
+		<meta name="og:site_name" content="anonfiction">
 		<meta name="og:locale" content="en_US">
 		<meta name="og:type" content="website">
 		<link rel="apple-touch-icon" sizes="57x57" href="/static/img/meta/apple-icon-57x57.png">
@@ -55,7 +55,6 @@
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
-
 			gtag('config', 'UA-2345677-20');
 		</script>
 	</head>
@@ -65,8 +64,12 @@
 				<div class="bg-black-80 {{ if .Landing }}pb5 pb6-m pb7-l{{end}} ph5-ns">
 					{{ template "navigation" . }} {{ if .Landing }}
 					<div class="mt4 mt5-m mt6-l ph3" style="max-width: 58rem;">
-						<h1 class="f2 f1-m f1-l fw2 white-90 mb0 lh-title">stories, incognito </h1>
-						<h2 class="fw1 f3 white-80 mt3 mb4"><span id="js-rotating">“I bought a burn phone.”,“It made a tear come to my eye.”,“Where do the peanuts go?”,“I was 18 and I pledged myself to three things.”,“Those fleshy emotional people would be appalled.”</span></h2>
+						<h1 class="f2 f1-m f1-l fw2 white-90 mb0 lh-title" id="landingtitle">
+						anonymous nonfiction
+						</h1>
+						<h2 class="fw1 f3 white-80 mt3 mb4">
+						<span>A magazine for creative Anonymous Nonfiction.</span>
+						</h2>
 						<a class="f6 f5-m f4-l no-underline grow dib v-mid bg-blue white ba b--blue ph4 pv3 mb3" href="/read/topic/"><strong>read a story</strong></a>
 						<span class="dib v-mid ph3 white-70 mb3">or</span>
 						<a class="f6 f5-m f4-l no-underline grow dib v-mid white ba b--white ph4 pv3 mb3" href="/write"><strong>write a story</strong></a>
@@ -74,40 +77,15 @@
 					{{ end}}
 				</div>
 			</div>
+			<script src="/static/js/jquery.min.js"></script>
 		</header>
-		<script src="/static/js/jquery.min.js"></script>
 		{{ if .Landing }}
-		<link rel="stylesheet" href="/static/css/animate.min.css">
-		<link rel="stylesheet" href="/static/css/morphext.css">
-		<script src="/static/js/morphext.js"></script>
 		<script>
-			var $morphext = $("#js-rotating").Morphext({
-				// The [in] animation type. Refer to Animate.css for a list of available animations.
-				animation: "fadeIn",
-				// An array of phrases to rotate are created based on this separator. Change it if you wish to separate the phrases differently (e.g. So Simple | Very Doge | Much Wow | Such Cool).
-				separator: ",",
-				// The delay between the changing of each phrase in milliseconds.
-				speed: 3000,
-				complete: function() {
-					// Called after the entrance animation is executed.
-				}
-			});
-			// Fisher-Yates Shuffle (see http://bost.ocks.org/mike/shuffle/)
-			function shuffle(array) {
-				var m = array.length,
-					t, i;
-				// While there remain elements to shuffle…
-				while (m) {
-					// Pick a remaining element…
-					i = Math.floor(Math.random() * m--);
-					// And swap it with the current element.
-					t = array[m];
-					array[m] = array[i];
-					array[i] = t;
-				}
-				return array;
-			}
-			var $data = $morphext.data("plugin_Morphext");
-			shuffle($data.phrases);
+			$(function() {
+		$('#landingtitle').fadeOut(1000, function() {
+		$(this).text('Anonfiction').fadeIn(1000);
+		});
+		});
 		</script>
-		{{ end }} {{ end }}
+		{{ end }}
+		{{ end }}
