Curved borders on images

--- a/templates/topics.tmpl
+++ b/templates/topics.tmpl
@@ -73,7 +73,7 @@
 		<a class="db pv4 ph3 ph0-l no-underline black dim" href="/read/topic/{{ .Name | slugify }}">
 			<div class="flex flex-column flex-row-ns">
 				<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-					<img src="/static/img/{{ .Name }}.jpg" class="db" alt="">
+					<img src="/static/img/{{ .Name }}.jpg" class="db" alt=""  style="border-radius: 25px;">
 				</div>
 				<div class="w-100 w-60-ns pl3-ns">
 					<h1 class="f2 fw1 mt0 lh-title mb0"><strong>{{.Name}}</strong></h1>
