--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -51,7 +51,7 @@ min-height: 320px !important;
 -->
 {{ if (and (not .SignedIn) (.Story.Content.CurrentText)) }}
 <span class="f6 db lh-copy measure-wide">
-	<em>Note:</em> You are currently not logged in. You should note down the URL to your story if you want to update in the future: <a href="/write/{{ .Story.ID }}">storiesincognito.org/write/{{.Story.ID}}</a>.
+	<em>Note:</em> You are currently not logged in. You should note down the URL to your story if you want to update in the future: <a href="/write/{{ .Story.ID }}">www.anonfiction.com/write/{{.Story.ID}}</a>.
 </span>
 {{ else }}
 {{ if not .SignedIn }}
