--- a/templates/all.tmpl
+++ b/templates/all.tmpl
@@ -9,7 +9,7 @@
 			{{ range $i, $e := .Topics }}
 			<section class="pv2">
 				<span class="f3 leader db lh-copy center pv2 fw6 tc measure">
-					“{{ $e.Name}}” <em class="f4 fw3">{{ $e.Date.Format "January 2006" }} </em>
+					“<a href="/read/topic/{{ $e.Name | slugify }}">{{ $e.Name}}</a>” <em class="f4 fw3">{{ $e.Date.Format "January 2006" }} </em>
 				</span>
 				{{ range $.Stories }}
 				{{ if eq .Topic $e.Name }}
